PyMaker/datas/object2/RawHTML/i4501/Python_DOC_referPages.include-as-key-in-json.txt
<div class="post-text" itemprop="text">
<p>Can the @ symbol be utilized as part of writing a Python object to json ? I'm attempting to use : </p>
<pre><code>import json

print(json.dumps(dict(@test=test)))
</code></pre>
<p>expected output is <code>{"@test":"test"}</code></p>
<p>But below error is thrown :</p>
<pre><code>File "&lt;ipython-input-38-7b37241c4d92&gt;", line 3
    def __init__(self , @id):
                        ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<pre><code>print(json.dumps({"@test": "test"}))
</code></pre>
<p>For further explanation see: <a href="https://docs.python.org/3/tutorial/datastructures.html#dictionaries" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/datastructures.html#dictionaries</a></p>
</div>
<span class="comment-copy">Your problem has nothing to do with json. But if you use the <code>dict()</code> constructor then the keys have to be valid Python identifiers. If they are not, construct your dict using <code>{ }</code>.</span>
<span class="comment-copy">Are you coming from the ruby world? Because in python you can define variables directly..</span>
<span class="comment-copy">Where have you seen that <code>@whatever</code> is valid Python syntax for an identifier ??? Also, your traceback doesn't even match your code snippet...</span>
